# hitori

./: .bzrignore  .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  git.mk  hitori.doap  meson.build
build-aux/: meson_post_install.py
data/: Makefile.am  Makefile.in  help-overlay.ui  hitori-menus.ui  hitori.appdata.xml.in  hitori.css  hitori.desktop.in  hitori.ui  meson.build  org.gnome.Hitori.appdata.xml.in  org.gnome.Hitori.desktop.in  org.gnome.Hitori.metainfo.xml.in  org.gnome.hitori.gschema.xml
data/icons/: meson.build
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
flatpak/: org.gnome.Hitori-stable.json  org.gnome.Hitori-unstable.json  org.gnome.Hitori.json
help/: ChangeLog  ChangeLog.pre-0-2-2  LINGUAS  Makefile.am  hitori.omf.in  meson.build
help/C/: customization.page  game.page  hitori.xml  index.page  legal.xml  playing.page  strategy.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/fur/: fur.po
help/hu/: hu.po
help/id/: id.po
help/kk/: kk.po
help/ko/: ko.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
po/: ChangeLog  ChangeLog.pre-0-2-2  LINGUAS  Makevars  POTFILES.in  ab.po  an.po  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  ml.po  (+22 more)
snap/: snapcraft.yaml
src/: Makefile.am  Makefile.in  generator.c  generator.h  hitori.gresource.xml  interface.c  interface.h  main.c  main.h  meson.build  rules.c  rules.h
