@YELP_HELP_RULES@

HELP_ID = hitori
HELP_LINGUAS = cs da de el en_GB es fr hu ro sl sv zh_CN
HELP_MEDIA = figures/hitori_main_window.png
HELP_FILES = \
	customization.page \
	game.page \
	index.page \
	legal.xml \
	playing.page \
	strategy.page

EXTRA_DIST = ChangeLog.pre-0-2-2

-include $(top_srcdir)/git.mk
