help_media = [
  'figures/dialog-question-symbolic.svg',
  'figures/edit-redo-symbolic.svg',
  'figures/edit-undo-symbolic.svg',
  'figures/hitori_main_window.png',
  'figures/org.gnome.Hitori.svg',
]
help_files = [
  'customization.page',
  'game.page',
  'index.page',
  'legal.xml',
  'playing.page',
  'strategy.page',
]

gnome.yelp(meson.project_name(),
  sources: help_files,
  media: help_media,
  symlink_media: true,
)
